Made some extra changes to yogesh.html file

--- a/yogesh.html
+++ b/yogesh.html
@@ -81,7 +81,7 @@
                 <div class="services-box">
                     <div class="icon">
                         <i class='bx bx-code-alt'></i>
-                        <a href="#"><i class='bx bx-arrow-back' ></i></a>
+                        <a href="#"><i class='bx bxl-css3'></i></a>
                     </div>
                     <h3>
                         Web Development
@@ -98,7 +98,7 @@ JAVASCRIPT
                 <div class="services-box">
                     <div class="icon">
                         <i class='bx bx-code-alt'></i>
-                        <a href="#"><i class='bx bx-arrow-back' ></i></a>
+                        <a href="#"><i class='bx bxl-stack-overflow' ></i></a>
                     </div>
                     <h3>
                         Programming Languages
@@ -135,7 +135,7 @@ FIGMA
                 <div class="services-box">
                     <div class="icon">
                         <i class='bx bx-code-alt'></i>
-                        <a href="#"><i class='bx bx-arrow-back' ></i></a>
+                        <a href="#"><i class='bx bxs-videos'></i></a>
                     </div>
                     <h3>
                       Video Editing
