All final changes are made

--- a/sanjith.html
+++ b/sanjith.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>portfolio.in</title>
-        <link rel="stylesheet" href="style.css">
+        <title>SANJITH S</title>
+        <link rel="stylesheet" href="sanjith.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
 
