--- a/sriram.html
+++ b/sriram.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>portfolio.in</title>
-        <link rel="stylesheet" href="style.css">
+        <title>SRIRAM R</title>
+        <link rel="stylesheet" href="sriram.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
 
@@ -56,7 +56,7 @@
 <div class="home-img">
     <div class="img-box">
         <div class="img-item">
-            <img src="dp-modified.png" alt="">
+            <img src="/Portfolio-Project/Sriram profile picture.jpg" alt="" class="profile-image">
         </div>
     </div>
 </div>
@@ -66,7 +66,7 @@
 
         <section class="about" id="about" >
        <div class="about-img">
-        <img src="dp-modified.png" alt="">
+        <img src="/Portfolio-Project/Sriram profile picture.jpg" alt="" class="profile-image">
        </div>
        <div class="about-text">
         <h2 style="color: white;">About<span>   Me</span></h2>
