--- a/yogesh.html
+++ b/yogesh.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>portfolio.in</title>
-        <link rel="stylesheet" href="style.css">
+        <title>YOGESHWARAN K</title>
+        <link rel="stylesheet" href="yogesh.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
 
